# catalog

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  test.yml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/tests/: test_views.py
bookcatalog/: settings.py  urls.py
